@@ -21,12 +21,11 @@ libthreadutil_la_LDFLAGS = -version-info $(LT_VERSION_THREADUTIL)
 
 libthreadutil_la_SOURCES = \
 			src/FreeList.c src/LinkedList.c \
-			src/ThreadPool.c src/TimerThread.c \
-			src/iasnprintf.c
+			src/ThreadPool.c src/TimerThread.c
 
 upnpincludedir		= $(includedir)/upnp
 upnpinclude_HEADERS	= \
 			inc/FreeList.h inc/LinkedList.h \
 			inc/ThreadPool.h inc/TimerThread.h \
-			inc/iasnprintf.h inc/ithread.h
+			inc/ithread.h
 
