@@ -1,66 +1,0 @@
-/*******************************************************************************
- *
- * Copyright (c) 2000-2003 Intel Corporation 
- * All rights reserved. 
- *
- * Redistribution and use in source and binary forms, with or without 
- * modification, are permitted provided that the following conditions are met: 
- *
- * * Redistributions of source code must retain the above copyright notice, 
- * this list of conditions and the following disclaimer. 
- * * Redistributions in binary form must reproduce the above copyright notice, 
- * this list of conditions and the following disclaimer in the documentation 
- * and/or other materials provided with the distribution. 
- * * Neither name of Intel Corporation nor the names of its contributors 
- * may be used to endorse or promote products derived from this software 
- * without specific prior written permission.
- * 
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS 
- * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT 
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR 
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL INTEL OR 
- * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, 
- * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, 
- * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR 
- * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY 
- * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
- * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS 
- * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
- *
- ******************************************************************************/
-
-#include <stdarg.h>
-
-#define EXPORT
-
-#ifdef __cplusplus
-extern "C" {
-#endif
-
-/**
- * Allocates enough memory for the
- * Formatted string, up to max
- * specified.
- * With max set to -1, allocates
- * as much size as needed.
- * Memory must be freed using free.
- */
-
-EXPORT int iasnprintf(char **ret,
-	       int incr,
-	       int max,
-	       const char * fmt, ...)
-#ifndef SPARC_SOLARIS
- #if (__GNUC__ >= 3)
-	__attribute__((format (__printf__, 4, 5)));
- #else
- ;
- #endif
- EXPORT void iasnprintfFree(char *);
-#else
-;
-#endif
-
-#ifdef __cplusplus
-}
-#endif
